	package.description() are defunct.

    o	The undocumented function newestVersion() is no longer exported
	from package utils.  (Mainly because it was not completely general.)

    o	If --enable-R-shlib is specified, a copy of libR is still
	installed in $R_HOME/bin, but this will be removed in the near
	future.  Use that in R_HOME/lib instead.


INSTALLATION CHANGES

    o	The dynamic libraries libR and libRlapack are now installed in
	R_HOME/lib rather than R_HOME/bin.

    o	When --enable-R-shlib is specified, the R executable is now
	a small executable linked against libR: see the R-admin
	manual for further discussion.  The 'extra' libraries bzip2,
	pcre, xdr and zlib are now only compiled in a way that allows
	the code to be included in a shared library if this option is
	specified, which might improve performance when it is not.

    o   The main R executable is now R_HOME/exec/R not R_HOME/R.bin, to
	ease issues on MacOS X.  (The location is needed when debugging
	core dumps.)


BUG FIXES

    o	rbind.data.frame() dropped names/rownames from columns in all but
	the first data frame.




	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.1


NEW FEATURES

    o	as.Date() now has a method for "POSIXlt" objects.

    o	mean() has a method for "difftime" objects and so summary() works.

    o	legend() has a new argument 'pt.cex'.

    o	plot.ts() has more arguments, particularly 'yax.flip'.


INSTALLATION ISSUES

    o	src/modules/X11/dataentry.c would not build on some XFree
	4.4.0 systems.	(This is a bug in their header files but we have
	added a workaround.)

    o	Building with gcc/g77 3.4.0 on ix86 platforms failed to produce
	a working build: the critical LAPACK routines are now compiled
	with -ffloat-store.

    o	Added patches to enable 64-bit builds on AIX 5.1: see the R-admin
	manual for details.
